force-app/main/default/objects/Registration_Type__c/Registration_Type__c.object-meta.xml
<CustomObject>
    <description>Part of the invitation process for programs.  Registration types are used to store the settings for each type of registeration for an event (i.e. family, volunter)</description>
    <label>Registration Type</label>
    <nameField>
        <label>Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>