force-app/main/default/objects/Registration_Type__c/fields/Corporate_Partner__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registration Types</relationshipLabel>
    <relationshipName>Registration_Types</relationshipName>
    <type>Lookup</type>
</CustomField>