force-app/main/default/objects/Registration_Type__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <inlineHelpText>Method of providing tickets to the allocated Family Groups</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picked up from Box Office by the Family Group</fullName>
            </value>
            <value>
                <fullName>Delivered by Camp Quality (Standard Mail or Express Mail)</fullName>
            </value>
            <value>
                <fullName>Collected by the Family Group from Camp Quality or another Location</fullName>
            </value>
            <value>
                <fullName>To be emailed (as a PDF attachment)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>