force-app/main/default/objects/Registration_Type__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Registration Types</relationshipLabel>
    <relationshipName>Registration_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>