force-app/main/default/objects/Registration_Type__c/fields/Families_Accepted_Attended__c.field-meta.xml
<CustomField>
    <fullName>Families_Accepted_Attended__c</fullName>
    <formula>Attended__c +  Accepted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Families Accepted Attended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>