force-app/main/default/objects/Registration_Type__c/fields/Family_Ticket_Size__c.field-meta.xml
<CustomField>
    <fullName>Family_Ticket_Size__c</fullName>
    <inlineHelpText>Maximum number per Family Group</inlineHelpText>
    <label>Family Ticket Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>