force-app/main/default/objects/Registration_Type__c/fields/First_in_first_served__c.field-meta.xml
<CustomField>
    <fullName>First_in_first_served__c</fullName>
    <inlineHelpText>Some or all Tickets allocated on a “First in first served” basis</inlineHelpText>
    <label>First in first served</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>