force-app/main/default/objects/Registration_Type__c/fields/First_in_first_served_quantity__c.field-meta.xml
<CustomField>
    <fullName>First_in_first_served_quantity__c</fullName>
    <inlineHelpText>Number of Tickets allocated on a “First in first served” basis</inlineHelpText>
    <label>First in first served quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>