force-app/main/default/objects/Registration_Type__c/fields/Initial_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Initial_Allocation__c</fullName>
    <inlineHelpText>Initial Invitation Allocation</inlineHelpText>
    <label>Initial Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>