force-app/main/default/objects/Registration_Type__c/fields/Interested__c.field-meta.xml
<CustomField>
    <fullName>Interested__c</fullName>
    <inlineHelpText>Number interested in attending (Includes requested, accepted, attended, unsuccessful).</inlineHelpText>
    <label>Interested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>