force-app/main/default/objects/Registration_Type__c/fields/Internally_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Internally_Allocated__c</fullName>
    <inlineHelpText>Some or all Tickets to be internally allocated by Camp Quality once registrations received</inlineHelpText>
    <label>Internally Allocated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>