force-app/main/default/objects/Registration_Type__c/fields/Internally_allocated_quantity__c.field-meta.xml
<CustomField>
    <fullName>Internally_allocated_quantity__c</fullName>
    <inlineHelpText>Number of Tickets to be internally allocated by Camp Quality once registrations received</inlineHelpText>
    <label>Internally allocated quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>