force-app/main/default/objects/Registration_Type__c/fields/Number_Available__c.field-meta.xml
<CustomField>
    <fullName>Number_Available__c</fullName>
    <inlineHelpText>Maximum Number of Tickets Available</inlineHelpText>
    <label>Number Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>