force-app/main/default/objects/Registration_Type__c/fields/Registrations_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Registrations_Remaining__c</fullName>
    <formula>Number_Available__c - (Accepted__c + Attended__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrations Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>