force-app/main/default/objects/Registration_Type__c/fields/Requested__c.field-meta.xml
<CustomField>
    <fullName>Requested__c</fullName>
    <label>Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>