force-app/main/default/objects/Registration_Type__c/fields/Ticket_Format__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Format__c</fullName>
    <label>Ticket Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>