force-app/main/default/objects/Registration_Type__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Mini Camp</fullName>
            </value>
            <value>
                <fullName>Jnr Camp</fullName>
            </value>
            <value>
                <fullName>Middle Camp</fullName>
            </value>
            <value>
                <fullName>Joint Junior and Middle Camp</fullName>
            </value>
            <value>
                <fullName>Joint Mini Jun and Middle</fullName>
            </value>
            <value>
                <fullName>Virtual Camp</fullName>
            </value>
            <value>
                <fullName>Leadership 15-17</fullName>
            </value>
            <value>
                <fullName>Teens 13- 15</fullName>
                <isActive>false</isActive>
                <label>Teens 13- 15</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>