force-app/main/default/objects/Registration_Type__c/recordTypes/Aged_Camp.recordType-meta.xml
<RecordType>
    <fullName>Aged_Camp</fullName>
    <active>true</active>
    <label>Aged Camp</label>
</RecordType>