force-app/main/default/objects/Registration_Type__c/recordTypes/Cabin_Availability.recordType-meta.xml
<RecordType>
    <fullName>Cabin_Availability</fullName>
    <active>true</active>
    <label>Cabin Availability</label>
</RecordType>