force-app/main/default/objects/Registration_Type__c/recordTypes/Corporate_Volunteer.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Volunteer</fullName>
    <active>true</active>
    <label>Corporate Volunteer</label>
</RecordType>