force-app/main/default/objects/Registration_Type__c/recordTypes/Ticket.recordType-meta.xml
<RecordType>
    <fullName>Ticket</fullName>
    <active>true</active>
    <description>Ticket Registration</description>
    <label>Family Ticket</label>
</RecordType>