force-app/main/default/objects/Registration_Type__c/recordTypes/Volunteer.recordType-meta.xml
<RecordType>
    <fullName>Volunteer</fullName>
    <active>true</active>
    <description>Volunteer Registration</description>
    <label>Volunteer</label>
</RecordType>