force-app/main/default/objects/Registration_Type__c/recordTypes/Volunteer_Training.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Training</fullName>
    <active>true</active>
    <label>Volunteer Training</label>
</RecordType>